// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkIcon > should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="transition-all inline-flex items-center justify-center align-middle border-2 rounded-full px-2 py-1 w-11 h-11 ring-6 text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      data-testid="NetworkIcon__icon"
    >
      <div
        style="height: 20px; width: 20px;"
      >
        <svg
          id="ark"
          style="height: 100%; width: 100%;"
          viewBox="0 0 36.3 30.6"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon > should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      data-testid="NetworkIcon__icon"
    >
      <div
        style="height: 20px; width: 20px;"
      >
        <svg
          id="ark"
          style="height: 100%; width: 100%;"
          viewBox="0 0 36.3 30.6"
          x="0"
          xml:space="preserve"
          xmlns="http://www.w3.org/2000/svg"
          y="0"
        >
          <path
            d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon > should render with placeholder 1`] = `
<DocumentFragment>
  <div
    class="transition-all inline-flex items-center justify-center align-middle border-2 rounded-full px-2 py-1 w-11 h-11 ring-6 ring-theme-background duration-100"
    data-testid="NetworkIcon__placeholder"
  />
</DocumentFragment>
`;
